semantic_analysis/src/cs143/reader/ASTParser.java
// Generated from /Users/satch/IdeaProjects/StackMachine/AST.g4 by ANTLR 4.7.2
package cs143.reader;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ASTParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		PROGRAM=1, CLASS=2, METHOD=3, ATTR=4, FORMAL=5, BRANCH=6, ASSIGN=7, STATIC_DISPATCH=8, 
		DISPATCH=9, COND=10, LOOP=11, TYPCASE=12, BLOCK=13, LET=14, PLUS=15, SUB=16, 
		MUL=17, DIVIDE=18, NEG=19, LT=20, EQ=21, LEQ=22, COMP=23, INT=24, STR=25, 
		BOOL=26, NEW=27, ISVOID=28, NO_EXPR=29, NO_TYPE=30, BOTTOM=31, OBJECT=32, 
		THROW=33, TRY_CATCH=34, TRY_FINALLY=35, ID=36, INT_CONST=37, LINENO=38, 
		LPAREN=39, RPAREN=40, COLON=41, STR_CONST=42, WS=43;
	public static final int
		RULE_program = 0, RULE_klass = 1, RULE_feature = 2, RULE_formal = 3, RULE_expr = 4, 
		RULE_type = 5, RULE_actuals = 6, RULE_kase = 7;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "klass", "feature", "formal", "expr", "type", "actuals", "kase"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'_program'", "'_class'", "'_method'", "'_attr'", "'_formal'", 
			"'_branch'", "'_assign'", "'_static_dispatch'", "'_dispatch'", "'_cond'", 
			"'_loop'", "'_typcase'", "'_block'", "'_let'", "'_plus'", "'_sub'", "'_mul'", 
			"'_divide'", "'_neg'", "'_lt'", "'_eq'", "'_leq'", "'_comp'", "'_int'", 
			"'_string'", "'_bool'", "'_new'", "'_isvoid'", "'_no_expr'", "'_no_type'", 
			"'_bottom'", "'_object'", "'_throw'", "'_try_catch'", "'_try_finally'", 
			null, null, null, "'('", "')'", "':'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "PROGRAM", "CLASS", "METHOD", "attr", "FORMAL", "BRANCH", "ASSIGN",
			"STATIC_DISPATCH", "DISPATCH", "COND", "LOOP", "TYPCASE", "BLOCK", "LET", 
			"PLUS", "SUB", "MUL", "DIVIDE", "NEG", "LT", "EQ", "LEQ", "COMP", "INT", 
			"STR", "BOOL", "NEW", "ISVOID", "NO_EXPR", "NO_TYPE", "BOTTOM", "OBJECT", 
			"THROW", "TRY_CATCH", "TRY_FINALLY", "ID", "INT_CONST", "LINENO", "LPAREN", 
			"RPAREN", "COLON", "STR_CONST", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "AST.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ASTParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode LINENO() { return getToken(ASTParser.LINENO, 0); }
		public TerminalNode PROGRAM() { return getToken(ASTParser.PROGRAM, 0); }
		public List<KlassContext> klass() {
			return getRuleContexts(KlassContext.class);
		}
		public KlassContext klass(int i) {
			return getRuleContext(KlassContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ASTVisitor ) return ((ASTVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(16);
			match(LINENO);
			setState(17);
			match(PROGRAM);
			setState(19); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(18);
				klass();
				}
				}
				setState(21); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==LINENO );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class KlassContext extends ParserRuleContext {
		public TerminalNode LINENO() { return getToken(ASTParser.LINENO, 0); }
		public TerminalNode CLASS() { return getToken(ASTParser.CLASS, 0); }
		public List<TerminalNode> ID() { return getTokens(ASTParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(ASTParser.ID, i);
		}
		public TerminalNode STR_CONST() { return getToken(ASTParser.STR_CONST, 0); }
		public TerminalNode LPAREN() { return getToken(ASTParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(ASTParser.RPAREN, 0); }
		public List<FeatureContext> feature() {
			return getRuleContexts(FeatureContext.class);
		}
		public FeatureContext feature(int i) {
			return getRuleContext(FeatureContext.class,i);
		}
		public KlassContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_klass; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ASTVisitor ) return ((ASTVisitor<? extends T>)visitor).visitKlass(this);
			else return visitor.visitChildren(this);
		}
	}

	public final KlassContext klass() throws RecognitionException {
		KlassContext _localctx = new KlassContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_klass);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(23);
			match(LINENO);
			setState(24);
			match(CLASS);
			setState(25);
			match(ID);
			setState(26);
			match(ID);
			setState(27);
			match(STR_CONST);
			setState(28);
			match(LPAREN);
			setState(32);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==LINENO) {
				{
				{
				setState(29);
				feature();
				}
				}
				setState(34);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(35);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FeatureContext extends ParserRuleContext {
		public FeatureContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_feature; }
	 
		public FeatureContext() { }
		public void copyFrom(FeatureContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class MethodFeatureContext extends FeatureContext {
		public TerminalNode LINENO() { return getToken(ASTParser.LINENO, 0); }
		public TerminalNode METHOD() { return getToken(ASTParser.METHOD, 0); }
		public List<TerminalNode> ID() { return getTokens(ASTParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(ASTParser.ID, i);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public List<FormalContext> formal() {
			return getRuleContexts(FormalContext.class);
		}
		public FormalContext formal(int i) {
			return getRuleContext(FormalContext.class,i);
		}
		public MethodFeatureContext(FeatureContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ASTVisitor ) return ((ASTVisitor<? extends T>)visitor).visitMethodFeature(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AttrFeatureContext extends FeatureContext {
		public TerminalNode LINENO() { return getToken(ASTParser.LINENO, 0); }
		public TerminalNode ATTR() { return getToken(ASTParser.ATTR, 0); }
		public List<TerminalNode> ID() { return getTokens(ASTParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(ASTParser.ID, i);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public AttrFeatureContext(FeatureContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ASTVisitor ) return ((ASTVisitor<? extends T>)visitor).visitAttrFeature(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FeatureContext feature() throws RecognitionException {
		FeatureContext _localctx = new FeatureContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_feature);
		int _la;
		try {
			setState(53);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				_localctx = new MethodFeatureContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(37);
				match(LINENO);
				setState(38);
				match(METHOD);
				setState(39);
				match(ID);
				setState(43);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==LINENO) {
					{
					{
					setState(40);
					formal();
					}
					}
					setState(45);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(46);
				match(ID);
				setState(47);
				expr();
				}
				break;
			case 2:
				_localctx = new AttrFeatureContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(48);
				match(LINENO);
				setState(49);
				match(ATTR);
				setState(50);
				match(ID);
				setState(51);
				match(ID);
				setState(52);
				expr();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FormalContext extends ParserRuleContext {
		public TerminalNode LINENO() { return getToken(ASTParser.LINENO, 0); }
		public TerminalNode FORMAL() { return getToken(ASTParser.FORMAL, 0); }
		public List<TerminalNode> ID() { return getTokens(ASTParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(ASTParser.ID, i);
		}
		public FormalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_formal; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ASTVisitor ) return ((ASTVisitor<? extends T>)visitor).visitFormal(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FormalContext formal() throws RecognitionException {
		FormalContext _localctx = new FormalContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_formal);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(55);
			match(LINENO);
			setState(56);
			match(FORMAL);
			setState(57);
			match(ID);
			setState(58);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
	 
		public ExprContext() { }
		public void copyFrom(ExprContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class DispatchExprContext extends ExprContext {
		public TerminalNode LINENO() { return getToken(ASTParser.LINENO, 0); }
		public TerminalNode DISPATCH() { return getToken(ASTParser.DISPATCH, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode ID() { return getToken(ASTParser.ID, 0); }
		public ActualsContext actuals() {
			return getRuleContext(ActualsContext.class,0);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public DispatchExprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ASTVisitor ) return ((ASTVisitor<? extends T>)visitor).visitDispatchExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class NewExprContext extends ExprContext {
		public TerminalNode LINENO() { return getToken(ASTParser.LINENO, 0); }
		public TerminalNode NEW() { return getToken(ASTParser.NEW, 0); }
		public TerminalNode ID() { return getToken(ASTParser.ID, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public NewExprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ASTVisitor ) return ((ASTVisitor<? extends T>)visitor).visitNewExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class StrExprContext extends ExprContext {
		public TerminalNode LINENO() { return getToken(ASTParser.LINENO, 0); }
		public TerminalNode STR() { return getToken(ASTParser.STR, 0); }
		public TerminalNode STR_CONST() { return getToken(ASTParser.STR_CONST, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public StrExprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ASTVisitor ) return ((ASTVisitor<? extends T>)visitor).visitStrExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class DivideExprContext extends ExprContext {
		public TerminalNode LINENO() { return getToken(ASTParser.LINENO, 0); }
		public TerminalNode DIVIDE() { return getToken(ASTParser.DIVIDE, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public DivideExprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ASTVisitor ) return ((ASTVisitor<? extends T>)visitor).visitDivideExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ObjectExprContext extends ExprContext {
		public TerminalNode LINENO() { return getToken(ASTParser.LINENO, 0); }
		public TerminalNode OBJECT() { return getToken(ASTParser.OBJECT, 0); }
		public TerminalNode ID() { return getToken(ASTParser.ID, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public ObjectExprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ASTVisitor ) return ((ASTVisitor<? extends T>)visitor).visitObjectExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class CondExprContext extends ExprContext {
		public TerminalNode LINENO() { return getToken(ASTParser.LINENO, 0); }
		public TerminalNode COND() { return getToken(ASTParser.COND, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public CondExprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ASTVisitor ) return ((ASTVisitor<? extends T>)visitor).visitCondExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class SubExprContext extends ExprContext {
		public TerminalNode LINENO() { return getToken(ASTParser.LINENO, 0); }
		public TerminalNode SUB() { return getToken(ASTParser.SUB, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public SubExprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ASTVisitor ) return ((ASTVisitor<? extends T>)visitor).visitSubExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class LetExprContext extends ExprContext {
		public TerminalNode LINENO() { return getToken(ASTParser.LINENO, 0); }
		public TerminalNode LET() { return getToken(ASTParser.LET, 0); }
		public List<TerminalNode> ID() { return getTokens(ASTParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(ASTParser.ID, i);
		}
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public LetExprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ASTVisitor ) return ((ASTVisitor<? extends T>)visitor).visitLetExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class TypCaseExprContext extends ExprContext {
		public TerminalNode LINENO() { return getToken(ASTParser.LINENO, 0); }
		public TerminalNode TYPCASE() { return getToken(ASTParser.TYPCASE, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public List<KaseContext> kase() {
			return getRuleContexts(KaseContext.class);
		}
		public KaseContext kase(int i) {
			return getRuleContext(KaseContext.class,i);
		}
		public TypCaseExprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ASTVisitor ) return ((ASTVisitor<? extends T>)visitor).visitTypCaseExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class LtExprContext extends ExprContext {
		public TerminalNode LINENO() { return getToken(ASTParser.LINENO, 0); }
		public TerminalNode LT() { return getToken(ASTParser.LT, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public LtExprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ASTVisitor ) return ((ASTVisitor<? extends T>)visitor).visitLtExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class IsVoidExprContext extends ExprContext {
		public TerminalNode LINENO() { return getToken(ASTParser.LINENO, 0); }
		public TerminalNode ISVOID() { return getToken(ASTParser.ISVOID, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public IsVoidExprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ASTVisitor ) return ((ASTVisitor<? extends T>)visitor).visitIsVoidExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class CompExprContext extends ExprContext {
		public TerminalNode LINENO() { return getToken(ASTParser.LINENO, 0); }
		public TerminalNode COMP() { return getToken(ASTParser.COMP, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public CompExprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ASTVisitor ) return ((ASTVisitor<? extends T>)visitor).visitCompExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class MulExprContext extends ExprContext {
		public TerminalNode LINENO() { return getToken(ASTParser.LINENO, 0); }
		public TerminalNode MUL() { return getToken(ASTParser.MUL, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public MulExprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ASTVisitor ) return ((ASTVisitor<? extends T>)visitor).visitMulExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class BlockExprContext extends ExprContext {
		public TerminalNode LINENO() { return getToken(ASTParser.LINENO, 0); }
		public TerminalNode BLOCK() { return getToken(ASTParser.BLOCK, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public BlockExprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ASTVisitor ) return ((ASTVisitor<? extends T>)visitor).visitBlockExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AssignExprContext extends ExprContext {
		public TerminalNode LINENO() { return getToken(ASTParser.LINENO, 0); }
		public TerminalNode ASSIGN() { return getToken(ASTParser.ASSIGN, 0); }
		public TerminalNode ID() { return getToken(ASTParser.ID, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public AssignExprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ASTVisitor ) return ((ASTVisitor<? extends T>)visitor).visitAssignExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ThrowExprContext extends ExprContext {
		public TerminalNode LINENO() { return getToken(ASTParser.LINENO, 0); }
		public TerminalNode THROW() { return getToken(ASTParser.THROW, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public ThrowExprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ASTVisitor ) return ((ASTVisitor<? extends T>)visitor).visitThrowExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class IntExprContext extends ExprContext {
		public TerminalNode LINENO() { return getToken(ASTParser.LINENO, 0); }
		public TerminalNode INT() { return getToken(ASTParser.INT, 0); }
		public TerminalNode INT_CONST() { return getToken(ASTParser.INT_CONST, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public IntExprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ASTVisitor ) return ((ASTVisitor<? extends T>)visitor).visitIntExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class StaticDispatchExprContext extends ExprContext {
		public TerminalNode LINENO() { return getToken(ASTParser.LINENO, 0); }
		public TerminalNode STATIC_DISPATCH() { return getToken(ASTParser.STATIC_DISPATCH, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public List<TerminalNode> ID() { return getTokens(ASTParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(ASTParser.ID, i);
		}
		public ActualsContext actuals() {
			return getRuleContext(ActualsContext.class,0);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public StaticDispatchExprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ASTVisitor ) return ((ASTVisitor<? extends T>)visitor).visitStaticDispatchExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class PlusExprContext extends ExprContext {
		public TerminalNode LINENO() { return getToken(ASTParser.LINENO, 0); }
		public TerminalNode PLUS() { return getToken(ASTParser.PLUS, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public PlusExprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ASTVisitor ) return ((ASTVisitor<? extends T>)visitor).visitPlusExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class TryCatchExprContext extends ExprContext {
		public TerminalNode LINENO() { return getToken(ASTParser.LINENO, 0); }
		public TerminalNode TRY_CATCH() { return getToken(ASTParser.TRY_CATCH, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode ID() { return getToken(ASTParser.ID, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TryCatchExprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ASTVisitor ) return ((ASTVisitor<? extends T>)visitor).visitTryCatchExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class LoopExprContext extends ExprContext {
		public TerminalNode LINENO() { return getToken(ASTParser.LINENO, 0); }
		public TerminalNode LOOP() { return getToken(ASTParser.LOOP, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public LoopExprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ASTVisitor ) return ((ASTVisitor<? extends T>)visitor).visitLoopExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class EqExprContext extends ExprContext {
		public TerminalNode LINENO() { return getToken(ASTParser.LINENO, 0); }
		public TerminalNode EQ() { return getToken(ASTParser.EQ, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public EqExprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ASTVisitor ) return ((ASTVisitor<? extends T>)visitor).visitEqExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class NoExprExprContext extends ExprContext {
		public TerminalNode LINENO() { return getToken(ASTParser.LINENO, 0); }
		public TerminalNode NO_EXPR() { return getToken(ASTParser.NO_EXPR, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public NoExprExprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ASTVisitor ) return ((ASTVisitor<? extends T>)visitor).visitNoExprExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class TryFinallyExprContext extends ExprContext {
		public TerminalNode LINENO() { return getToken(ASTParser.LINENO, 0); }
		public TerminalNode TRY_FINALLY() { return getToken(ASTParser.TRY_FINALLY, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TryFinallyExprContext(ExprContext ctx) { copyFrom(ctx); }
